fix sizing, placement, and scrollbar issues

--- a/src/vs/workbench/contrib/positronPreview/browser/components/actionBars.css
+++ b/src/vs/workbench/contrib/positronPreview/browser/components/actionBars.css
@@ -2,6 +2,11 @@
  *  Copyright (C) 2024 Posit Software, PBC. All rights reserved.
  *--------------------------------------------------------------------------------------------*/
 
+/*
+Adjust default action bar styles so that the center grows
+and the left and right regions do not; this causes the URL
+bar to fill the center of the toolbar.
+*/
 .preview-action-bar .action-bar-region-left,
 .preview-action-bar .action-bar-region-right {
 	flex: 0;
@@ -11,7 +16,7 @@
 	flex: 1;
 }
 
-.url-bar {
+.preview-action-bar .url-bar {
 	border: 1px solid var(--vscode-input-border);
 	border-radius: 4px;
 	margin-left: 10px;
